force-app/main/default/objects/Features__c/Features__c.object-meta.xml
<CustomObject>
    <description>Features for Products in Salesforce.  Updated with Integration.
Object Type: IA
Integrated: Y</description>
    <label>Features</label>
    <nameField>
        <label>Red Wing ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>