force-app/main/default/objects/Features__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <description>Name of a Feature
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Name of a Feature</inlineHelpText>
    <label>Feature Name</label>
    <length>63</length>
    <type>Text</type>
</CustomField>