force-app/main/default/objects/Features__c/fields/IA_Feature__c.field-meta.xml
<CustomField>
    <fullName>IA_Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to IA Feature Object.  IA Features are those displayed in the Community. This associates a feature with an IA Feature.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Lookup to IA Feature Object.  IA Features are those displayed in the Community.  This associates a feature with an IA Feature.</inlineHelpText>
    <label>IA Feature</label>
    <referenceTo>IA_Feature__c</referenceTo>
    <relationshipLabel>Features</relationshipLabel>
    <relationshipName>Features</relationshipName>
    <type>Lookup</type>
</CustomField>