force-app/main/default/objects/Features__c/fields/RWS_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>RWS_Last_Updated_Date__c</fullName>
    <description>Used to eliminate overwriting the latest item data with old item data if any old message flows from the queue.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Used to eliminate overwriting the latest item data with old item data if any old message flows from the queue.  Updated by integration.</inlineHelpText>
    <label>RWS Last Updated Date</label>
    <type>DateTime</type>
</CustomField>