force-app/main/default/objects/Features__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Feature_Name__c</columns>
    <columns>RWS_Id__c</columns>
    <columns>IA_Feature__c</columns>
    <columns>RWS_Last_Updated_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RWS_Id__c</field>
        <operation>startsWith</operation>
        <value>C</value>
    </filters>
    <label>All</label>
</ListView>